Closed Bug 1832528 Opened 3 years ago Closed 3 years ago

background-image set via variable to an svg data uri flickers if set to a mask image too.

Categories

(Core :: Graphics: ImageLib, defect)

defect

Tracking

()

VERIFIED FIXED
115 Branch
Tracking Status
firefox115 --- verified
firefox116 --- verified

People

(Reporter: emilio, Assigned: emilio)

References

Details

Attachments

(3 files)

(As reported by rossi in bug 1581268 comment #7)

I have this exact bug in v113.0 (macos), you can see it for example on this website: https://docusaurus-openapi.tryingpan.dev/petstore/add-pet
when you click through the menu items or just switch between "default" and "example" in the code sample on the right hand side - the arrows in the sidebar menu are flickering. as soon as you replace the css var with the actual svg url() from the var, it stops flickering.

I can repro that.

Attached file test-case

Okay so the key to reproduce the bug here is that you need to use the same image as a mask and as a background.

This is because masks load with different cors modes so we miss the cache for one, then insert that and miss the cache for the other, ad infinitum.

Component: CSS Parsing and Computation → Graphics: ImageLib
Summary: background-image set via variable to an svg data uri flickers → background-image set via variable to an svg data uri flickers if set to a mask image too.

So that we can hold entries loaded with different CORS modes, such as
masks and backgrounds.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/2a4a5c3dd88c Make cors mode part of the image cache key. r=tnikkel
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/40238 for changes under testing/web-platform/tests
Regressions: 1835183
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 115 Branch
Upstream PR merged by moz-wptsync-bot
No longer regressions: 1835183
QA Whiteboard: [qa-115b-p2]

Reproducible on a 2023-05-23 Nightly build on Windows 10.
Verified as fixed on Firefox 115.0b5(build ID: 20230613195413) and Nightly 116.0a1(build ID: 20230615094111) on Windows 10, macOS 12, Ubuntu 22.

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-115b-p2]
No longer blocks: 1760532
Duplicate of this bug: 1760532
See Also: 1581268
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: