Bug 1832528 - Make cors mode part of the image cache key. r=tnikkel

So that we can hold entries loaded with different CORS modes, such as
masks and backgrounds.

Differential Revision: https://phabricator.services.mozilla.com/D177759